--- a/src/service/data_path_logic/CMakeLists.txt
+++ b/src/service/data_path_logic/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 3.10.0)
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
-CHECK_INCLUDE_FILES("mxnet-cpp/MxNetCpp.h" HAS_MXNET_CPP)
-
 add_library(console_printer_dpl SHARED console_printer_dpl.cpp)
 target_include_directories(console_printer_dpl PRIVATE
     $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
@@ -11,6 +9,38 @@ target_include_directories(console_printer_dpl PRIVATE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
 )
+
+if (HAS_MXNET_CPP AND OPENCV_CORE_FOUND)
+   add_library(image_pipeline_dpl SHARED image_pipeline_dpl.cpp)
+    target_include_directories(image_pipeline_dpl PRIVATE
+        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
+        $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>
+    )
+    target_link_libraries(image_pipeline_dpl mxnet cascade)
+
+    add_custom_command(TARGET image_pipeline_dpl POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/download_cnn_classifier_models.sh
+        ${CMAKE_CURRENT_BINARY_DIR}/download_cnn_classifier_models.sh
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/video_receive.py
+        ${CMAKE_CURRENT_BINARY_DIR}/video_receive.py
+    )
+
+    # azure
+    find_package(azure-storage-blobs-cpp CONFIG REQUIRED)
+    # find_library(XML2_LIBRARY xml2)
+    add_library(azure_upload_dpl SHARED azure_upload_dpl.cpp)
+    target_include_directories(azure_upload_dpl PRIVATE
+        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
+    )
+    target_link_libraries(azure_upload_dpl cascade Azure::azure-storage-blobs)
+endif()
+
 
 ##TODO: enable cnn_classifier dpl after data path logic manager is finished.
 ##if (HAS_MXNET_CPP AND OPENCV_CORE_FOUND)
