--- a/src/service/cfg/n2/derecho.cfg
+++ b/src/service/cfg/n2/derecho.cfg
@@ -172,6 +172,13 @@ default_log_level = trace
 # cascade service configuration
 # TODO: add document for how to setup a cascade service.
 [CASCADE]
+flower_synset = ../../data_path_logic/flower-model/synset.txt 
+flower_symbol = ../../data_path_logic/flower-model/flower-recognition-symbol.json
+flower_params = ../../data_path_logic/flower-model/flower-recognition-0040.params
+pet_synset = ../../data_path_logic/pet-model/synset.txt
+pet_symbol = ../../data_path_logic/pet-model/pet-recognition-symbol.json
+pet_params = ../../data_path_logic/pet-model/pet-recognition-0010.params
+report_to = 127.0.0.1:54321
 group_layout = '
 [
     {
@@ -188,12 +195,6 @@ group_layout = '
     {
         "type_alias":   "PersistentCascadeStoreWithStringKey",
         "layout":       [
-                            {
-                                "min_nodes_by_shard": [1,1],
-                                "max_nodes_by_shard": [1,1],
-                                "delivery_modes_by_shard": ["Ordered","Ordered"],
-                                "profiles_by_shard": ["DEFAULT","DEFAULT"]
-                            },
                             {
                                 "min_nodes_by_shard": [1],
                                 "max_nodes_by_shard": [1],
