--- a/src/applications/demos/demo_cfg/n2/derecho.cfg
+++ b/src/applications/demos/demo_cfg/n2/derecho.cfg
@@ -172,6 +172,7 @@ default_log_level = trace
 # cascade service configuration
 # TODO: add document for how to setup a cascade service.
 [CASCADE]
+report_to = 127.0.0.1:54321
 group_layout = '
 [
     {
