--- a/src/applications/demos/dairy_farm/CMakeLists.txt
+++ b/src/applications/demos/dairy_farm/CMakeLists.txt
@@ -18,10 +18,48 @@ if (TENSORFLOW_LIB AND OPENCV_CORE_FOUND)
     target_link_libraries(filter_dpl cascade ${OpenCV_LIBS} ${TENSORFLOW_LIB})
 
     add_custom_command(TARGET filter_dpl POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/video_receive.py
-        ${CMAKE_CURRENT_BINARY_DIR}/video_receive.py
         COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/filter-model.tar.gz
         ${CMAKE_CURRENT_BINARY_DIR}/filter-model.tar.gz
+        COMMENT "prepare filter_dpl"
+    )
+
+    find_package(Torch)
+    if (TORCH_FOUND)
+        add_library(infer_dpl SHARED infer_dpl.cpp)
+        target_include_directories(infer_dpl PRIVATE
+            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+            $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
+            $<BUILD_INTERFACE:${TORCH_INCLUDE_DIRS}>
+            $<BUILD_INTERFACE:${TENSORFLOW_LIB_INCLUDE_DIRS}>
+            $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>
+        )
+        target_link_libraries(infer_dpl cascade ${TENSORFLOW_LIB} ${TORCH_LIBRARIES} ${OpenCV_LIBS} ANN)
+
+        add_custom_command(TARGET infer_dpl POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/bcs-inference-model.tar.gz
+            ${CMAKE_CURRENT_BINARY_DIR}/bcs-inference-model.tar.gz
+            COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cow-id-model.tar.gz
+            ${CMAKE_CURRENT_BINARY_DIR}/cow-id-model.tar.gz
+            COMMENT "prepare infer_dpl"
+        )
+    endif()
+endif()
+
+if (OPENCV_CORE_FOUND)
+    add_executable(dairy_farm_client client.cpp)
+    target_include_directories(dairy_farm_client PRIVATE
+        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
+        $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>
+    )
+    target_link_libraries(dairy_farm_client cascade ${OpenCV_LIBS})
+    add_custom_command(TARGET dairy_farm_client POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/video_receive.py
+        ${CMAKE_CURRENT_BINARY_DIR}/video_receive.py
         COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/extract_model.sh
         ${CMAKE_CURRENT_BINARY_DIR}/extract_model.sh
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/dairy_farm_cfg
@@ -61,36 +99,5 @@ if (TENSORFLOW_LIB AND OPENCV_CORE_FOUND)
                 ${CMAKE_CURRENT_SOURCE_DIR}/dairy_farm_cfg/dpl_dlls.cfg.tmp
         COMMENT "prepare dairy farm demo configuration"
     )
-
-    find_package(Torch)
-    if (TORCH_FOUND)
-        add_library(infer_dpl SHARED infer_dpl.cpp)
-        target_include_directories(infer_dpl PRIVATE
-            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
-            $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
-            $<BUILD_INTERFACE:${TORCH_INCLUDE_DIRS}>
-            $<BUILD_INTERFACE:${TENSORFLOW_LIB_INCLUDE_DIRS}>
-            $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>
-        )
-        target_link_libraries(infer_dpl cascade ${TENSORFLOW_LIB} ${TORCH_LIBRARIES} ${OpenCV_LIBS} ANN)
-
-        add_custom_command(TARGET infer_dpl POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/bcs-inference-model.tar.gz
-            ${CMAKE_CURRENT_BINARY_DIR}/bcs-inference-model.tar.gz
-            COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cow-id-model.tar.gz
-            ${CMAKE_CURRENT_BINARY_DIR}/cow-id-model.tar.gz
-        )
-    endif()
-
 endif()
-
-add_executable(dairy_farm_client client.cpp)
-target_include_directories(dairy_farm_client PRIVATE
-    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
-)
 
